# moco

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.musl  README.md  targets.json
.github/actions/setup-xtask/: action.yml
.github/workflows/: build.yml  lint.yml  pr.yml
scripts/: build-image.sh
src/: api.rs  cli.rs  logging.rs  main.rs  populater.rs
src/api/: errors.rs  http.rs  types.rs
src/cli/: parsers.rs
xtask/: Cargo.toml
xtask/src/: build_image.rs  generate_targets.rs  main.rs  util.rs
