[package]
name = "moco"
version = "0.1.0"
authors = ["Alexander Krantz <alex@krantz.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive", "env"] }
color-eyre = "0.6"
dotenvy = "0.15"
eyre = "0.6"
