[package]
name = "moco"
version = "0.1.0"
authors = ["Alexander Krantz <alex@krantz.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive", "env"] }
color-eyre = "0.6"
dotenvy = "0.15"
eyre = "0.6"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
url = { version = "2.4", features = ["serde"] }
