[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive", "env"] }
color-eyre = "0.6"
dotenvy = "0.15"
eyre = "0.6"
itertools = "0.11"
once_cell = "1.18"
owo-colors = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
